--- a/less/css/base.less
+++ b/less/css/base.less
@@ -14,6 +14,7 @@ body {
   color: #595B66;
   max-width: 1024px;
   font-family: 'Microsoft Yahei', sans-serif;
+  overflow-x: hidden;
 }
 
 h1, h2, h3, h4 {
