--- a/Array/css/base.css
+++ b/Array/css/base.css
@@ -26,7 +26,7 @@ h1, h2 {
   border-bottom: 2px solid #797979;
 }
 
-a{
+a,a:hover{
   text-decoration: none;
   color:#797979;
 }
@@ -38,7 +38,7 @@ pre .code-copy{
   padding: 5px;
   position: absolute;
   top: 0;
-  color: #900b09;
+  color: white;
 }
 
 p, pre {
@@ -47,40 +47,42 @@ p, pre {
   background-color: #797979;
   color: white;
   position:relative;
+  word-break:break-all;
+}
+p, h1, h2, h3, h4, pre {
+  margin: 15px 0;
 }
 
+.box-item {
+  width: 200px;
+  height: 200px;
+  line-height: 1.5rem;
+  background-color: white;
+  margin: 5px;
+  text-align: center;
+  display: flex;
+}
+
+
+.box {
+  background-color: #ffd200;
+  margin: 15px 0 40px;
+  display: -webkit-flex;
+  display: flex;
+}
+
+code {
+  font-size: 1rem;
+  border-radius: 5px;
+}
+
+/*
 pre code{
   display: block;
   padding: 0;
   margin: 0;
   line-height: 2rem;
   border-radius: 0;
-}
-
-p, h1, h2, h3, h4, pre {
-  margin: 15px 0;
-}
-
-code {
-  color: #111111;
-  display: inline-block;
-  padding-left: 5px;
-  padding-right: 5px;
-  font-size: 120%;
-  background-color: pink;
-  border-radius: 5px;
-  margin: auto 3px;
-}
-.box-item {
-  width: 200px;
-  height: 200px;
-  line-height: 1.5rem;
-  background-color: white;
-
-
-  margin: 5px;
-  text-align: center;
-  display: flex;/*只是为了内容居中才设置的flex*/
 }
 
 span {
@@ -93,10 +95,17 @@ span {
   height:100px;
   line-height: 100px;
 }
-.box {
-  background-color: #ffd200;
-  margin: 15px 0 40px;
-  display: -webkit-flex;
-  display: flex;
+
+code {
+  color: #111111;
+  display: inline-block;
+  padding-left: 5px;
+  padding-right: 5px;
+  font-size: 120%;
+  background-color: pink;
+  border-radius: 5px;
+  margin: auto 3px;
 }
+
+*/
 
