--- a/common/css/bootstrap.css
+++ b/common/css/bootstrap.css
@@ -1569,14 +1569,14 @@ pre {
   border: 1px solid #ccc;
   border-radius: 4px;
 }
-pre code {
+/*pre code {
   padding: 0;
   font-size: inherit;
   color: inherit;
   white-space: pre-wrap;
   background-color: transparent;
   border-radius: 0;
-}
+}*/
 .pre-scrollable {
   max-height: 340px;
   overflow-y: scroll;
